...
                                                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" horizontalCompressionResistancePriority="1000" image="menu-notices" translatesAutoresizingMaskIntoConstraints="NO" id="eIZ-Kb-Qqy">
                                                                <rect key="frame" x="0.0" y="11" width="24" height="28"/>
                                                            </imageView>
                                                            <stackView opaque="NO" contentMode="scaleToFill" alignment="center" spacing="6" translatesAutoresizingMaskIntoConstraints="NO" id="lzq-fO-iJX">
                                                                <rect key="frame" x="38.999999999999986" y="0.0" width="204.66666666666663" height="50"/>
                                                                <subviews>
                                                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" verticalHuggingPriority="251" horizontalCompressionResistancePriority="999" verticalCompressionResistancePriority="1000" text="Events" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAuto
                                                                        <rect key="frame" x="0.0" y="14.999999999999998" width="52.666666666666664" height="20.333333333333329"/>
                                                                        <accessibility key="accessibilityConfiguration" label="main_menu_events_label"/>
                                                                        <fontDescription key="fontDescription" type="system" weight="medium" pointSize="17"/>
                                                                        <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                                        <nil key="highlightedColor"/>
                                                                    </label>
                                                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="249" verticalHuggingPriority="251" horizontalCompressionResistancePriority="998" verticalCompressionResistancePriority="1000" text="" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSiz
                                                                        <rect key="frame" x="58.666666666666686" y="0.0" width="146" height="50"/>
...
