...
                                                                </constraints>
                                                            </imageView>
                                                        </subviews>
                                                    </stackView>
                                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="lXG-vz-HhX" customClass="ShadeEffectButton" customModule="VillageCoreUI" customModuleProvider="target">
                                                        <rect key="frame" x="0.0" y="0.0" width="384" height="50"/>
                                                        <accessibility key="accessibilityConfiguration" label="My Schedule"/>
                                                        <userDefinedRuntimeAttributes>
                                                            <userDefinedRuntimeAttribute type="number" keyPath="layer.cornerRadius">
                                                                <integer key="value" value="5"/>
                                                            </userDefinedRuntimeAttribute>
                                                        </userDefinedRuntimeAttributes>
                                                        <connections>
...
                                                                <fontDescription key="fontDescription" name="ProximaNova-Semibold" family="Proxima Nova" pointSize="14"/>
                                                                <color key="textColor" red="0.1058823529" green="0.1058823529" blue="0.1058823529" alpha="1" colorSpace="calibratedRGB"/>
                                                                <nil key="highlightedColor"/>
                                                            </label>
                                                            <button opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="1000" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Qke-j0-6fJ">
                                                                <rect key="frame" x="340" y="0.0" width="44" height="16"/>
                                                                <accessibility key="accessibilityConfiguration" label="view_all_notices"/>
                                                                <fontDescription key="fontDescription" name="ProximaNova-Semibold" family="Proxima Nova" pointSize="12"/>
                                                                <state key="normal" title="View All">
                                                                    <color key="titleColor" red="0.41960784309999999" green="0.47843137250000001" blue="0.51372549020000002" alpha="1" colorSpace="calibratedRGB"/>
                                                                </state>
                                                                <connections>
                                                                    <action selector="viewAllNotices" destination="g1i-ES-Sfb" eventType="touchUpInside" id="03U-Xr-WAM"/>
                                                                </connections>
                                                            </button>
...
                                    <constraint firstAttribute="bottom" secondItem="wPh-Fs-kpY" secondAttribute="bottom" id="c6E-Vc-OdY"/>
                                    <constraint firstItem="wPh-Fs-kpY" firstAttribute="top" secondItem="nUD-ku-7si" secondAttribute="top" id="cfv-Mr-bt0"/>
                                    <constraint firstItem="F8N-1l-jfo" firstAttribute="centerX" secondItem="wPh-Fs-kpY" secondAttribute="centerX" id="lwU-hf-MwB"/>
                                    <constraint firstItem="F8N-1l-jfo" firstAttribute="top" secondItem="wPh-Fs-kpY" secondAttribute="top" constant="52" id="ovG-qY-q02"/>
                                </constraints>
                                <userDefinedRuntimeAttributes>
                                    <userDefinedRuntimeAttribute type="string" keyPath="accessibilityIdentifier" value="scrollView"/>
                                </userDefinedRuntimeAttributes>
                            </scrollView>
                        </subviews>
                        <color key="backgroundColor" red="0.94117647058823528" green="0.94117647058823528" blue="0.94117647058823528" alpha="1" colorSpace="calibratedRGB"/>
                        <constraints>
                            <constraint firstItem="nUD-ku-7si" firstAttribute="trailing" secondItem="9HJ-cL-eKk" secondAttribute="trailing" id="Lva-Ky-4aM"/>
...
